--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,13 @@
 {
-    "presets": [
-        [
-            "@babel/preset-env",
-            {
-                "useBuiltIns": false
-            }
-        ]
+  "presets": [
+    [
+      "@babel/preset-env",
+      {
+        "useBuiltIns": false,
+        "targets":   {
+          "esmodules": true
+        }
+      }
     ]
+  ]
 }
