--- a/.babelrc
+++ b/.babelrc
@@ -3,10 +3,7 @@
     [
       "@babel/preset-env",
       {
-        "useBuiltIns": false,
-        "targets":   {
-          "esmodules": true
-        }
+        "useBuiltIns": false
       }
     ]
   ]
